// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Based - Full Integration Tests String Array Test should generate files 1`] = `
Array [
  "index.ts",
  "string-array-test-object.form-group-fac.ts",
  "string-array-test-object.model.ts",
  "string-array-test-object.properties.ts",
]
`;

exports[`File Based - Full Integration Tests String Array Test should generate files: index.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './string-array-test-object.form-group-fac';
export * from './string-array-test-object.model';
export * from './string-array-test-object.properties';
"
`;

exports[`File Based - Full Integration Tests String Array Test should generate files: string-array-test-object.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function StringArrayTestObjectFormGroupFac(): FormGroup {
  return new FormGroup({
    typeCodes: new FormControl([]),
  });
};
"
`;

exports[`File Based - Full Integration Tests String Array Test should generate files: string-array-test-object.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IStringArrayTestObject {
  typeCodes?: string[];
}
"
`;

exports[`File Based - Full Integration Tests String Array Test should generate files: string-array-test-object.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum StringArrayTestObjectProperties {
  TYPE_CODES = 'typeCodes',
}
"
`;
